--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "16.6.3",
-    "react-native": "^0.58.6"
+    "react-native": "^0.58.6",
+    "react-native-base64": "0.0.2",
+    "react-native-router-flux": "^4.0.6"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
